# python-binance-tranding-bot

./: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  API_REFACTOR_REPORT.md  CONTRIBUTING.md  Dockerfile  Makefile  PAPER_TRADING_TEST_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTNET_CONFIG_COMPLETE.md  TESTNET_SETUP_GUIDE.md  demo.py  diagnose_api_keys.py  diagnose_api_permissions.py  docker-compose.yml  fix_timestamp.py  main.py  monitor.py  pyproject.toml  reset_state.py  setup.py  sync_time.py  system_test_new.py  system_test_old.py  test_api_manual.py  test_demo_mode.py  test_engine_direct.py  test_orders_api.py  test_paper_trading.py  test_paper_trading_discord.py  test_time_sync.py  test_trading_start.py  validate_api_keys.py
.github/workflows/: ci.yml
src/: __init__.py  api.py  api_backup.py  backtest_engine.py  binance_client.py  binance_client_backup.py  binance_client_new.py  config.py  data_manager.py  data_manager_fixed.py  demo_client.py  discord_notifier.py  notifications.py  paper_trading_client.py  paper_trading_client_old.py  risk_manager.py  shared_state.py  symbol_discovery.py  trading_engine.py  trading_engine_backup.py
src/api/: __init__.py  models.py
src/api/routes/: market.py  orders.py  pages.py  positions.py  trading.py
src/database/: __init__.py  models.py
src/strategies/: __init__.py  base.py
